# bis_policy_rate_monitor

./: .gitignore  .pre-commit-config.yaml  LICENSES.md  README.md  SECURITY.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml
data/raw/: fetch_manifest.json
src/bis_prates/: __init__.py  cli.py  fetch.py  metadata.py  report.py  speech_sentiment.py  speech_transformer.py  speeches.py  transform.py
src/bis_prates/report/: __init__.py  chart.py  core.py  data.py  html_writer.py  json_writer.py
tests/: test_cli.py  test_fetch.py  test_metadata.py  test_report.py  test_speech_transformer.py  test_speeches.py  test_transform.py
tests/unit/: test_cli.py  test_fetch.py  test_metadata.py  test_report.py  test_speech_sentiment.py  test_speeches.py  test_transform.py
