[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bis-policy-rate-monitor"
version = "0.1.0"
description = "BIS Policy Rate Monitor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gingado>=0.2.7,<0.3",
    "matplotlib>=3.7,<4",
    "pandas>=2.0,<3",
    "pyarrow>=15,<23",
    "pysdmx>=1.14,<2",
]

[project.scripts]
bis-prates = "bis_prates.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
