[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bis-policy-rate-monitor"
version = "0.1.0"
description = "BIS Policy Rate Monitor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gingado>=0.2.7,<0.3",
    "matplotlib>=3.7,<4",
    "pandas>=2.0,<3",
    "pyarrow>=15,<23",
    "pysdmx>=1.14,<2",
]

[project.optional-dependencies]
transformer = [
    "torch>=2.1,<3",
    "transformers>=4.40,<5",
]

[project.scripts]
bis-prates = "bis_prates.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "pip-licenses>=4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "data", "out"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "S",     # bandit-style security
    "SIM",   # simplify
    "RUF",   # ruff-specific
    "D",     # pydocstyle (Google convention configured below)
]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "S101",  # asserts are fine in this codebase
    "S310",  # urlopen on hardcoded https BIS URLs — bandit tracks via `# nosec B310`
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "N802"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["bis_prates"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=bis_prates",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/bis_prates"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "data", "out", ".venv"]

[tool.mypy]
# Loose-but-useful baseline: catch the high-value bugs without burning time on
# stub gaps in pandas/matplotlib/gingado. Tighten per-module as confidence grows.
python_version = "3.11"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
