[metadata]
name = bis-policy-rate-monitor
version = 0.1.0
description = BIS Policy Rate Monitor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bis-prates = bis_prates.cli:main
